--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,8 @@ footer-links:
   github: misamabbas
   linkedin: /in/misam/
   twitter: misamabbas
-  stackoverflow: users/3092002/misam-abbas
+  stackoverflow: users/2617939/misam-abbas
+  kaggle: misamabbas
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
 
