--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Misam Abbas
 description: I talk to machines. 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/misamabbas/misamabbas.github.io/master/images/misam.jpg
 
 #
 # Flags below are optional
