--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ footer-links:
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
 
-url: https://misamabbas.github.io
+url: http://blog.verbalanalytics.com
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
