--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://raw.githubusercontent.com/misamabbas/misamabbas.github.io/master
 # Includes an icon in the footer for each username you enter
 footer-links:
   github: misamabbas
-  linkedin: /in/misam/
+  linkedin: misam
   twitter: misamabbas
   stackoverflow: users/2617939/misam-abbas
   kaggle: misamabbas
