--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Misam Abbas
 
 # Short bio or description (displayed in the header)
-description: I talk to machines. 
+description: I like to talk to machines. 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/misamabbas/misamabbas.github.io/master/images/misam.jpg
