--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Misam Abbas
 description: I like to talk to machines. 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/misamabbas/misamabbas.github.io/master/images/misam.jpg
+avatar: https://raw.githubusercontent.com/misamabbas/misamabbas.github.io/master/images/Misam_Photo.jpeg
 
 #
 # Flags below are optional
